@@ -134,7 +134,7 @@ UtfCount(
 #endif
     return 3;
 }
-
+
 /*
  *---------------------------------------------------------------------------
  *
